# tkinter-currency-conversion-app

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_main.py
