[tool.poetry]
name = "tkinter_currency_conversion_app"
version = "0.1.0"
description = ""
authors = ["Vinicius Barbosa de Aguiar <vb9763662@gmail.com>"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
